--- a/100/page1.html
+++ b/100/page1.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>先锋少年对话百年榜样人物</title>
 </head>
-<body style="display: flex; text-align: center;flex-direction: column;" background="red_bg.jpeg">
+<body style="display: flex; text-align: center;flex-direction: column;" background="https://cdn.jsdelivr.net/gh/sunnyFxx/sunnyFxx.github.io@master/100/red_bg.jpeg">
 	<div style="color: #F5A9BC;margin: auto;align-items: center;margin-top: 30px; margin-bottom: 20px; font-size: 30px; font-weight: bold;">先锋少年对话百年榜样人物</div>
 	<div style="width: auto;height: 300px;background: rgba(236,246,206,0.5); margin-top: 20px; display: flex; flex-direction: row; border:1px solid #BDBDBD; ">
-		<img src="jyl.jpeg" style="width: 280px; height: 280px; margin-top: 10px; margin-left: 10px">
+		<img src="https://cdn.jsdelivr.net/gh/sunnyFxx/sunnyFxx.github.io@master/100/jyl.jpeg" style="width: 280px; height: 280px; margin-top: 10px; margin-left: 10px">
 		<div style="margin-left: 30px; padding: 20px; text-align: left;">焦裕禄（1922年8月16日～1964年5月14日），山东淄博博山县北崮山村人，原兰考县委书记，干部楷模，革命烈士。在兰考担任县委书记时所表现出来的“亲民爱民、艰苦奋斗、科学求实、迎难而上、无私奉献”的精神，被后人称之为“焦裕禄精神”。1922年8月16日，焦裕禄出生在一个贫苦家庭，1946年加入了中国共产党，1950年，被任命为尉氏县大营区委副书记兼区长，1954年8月相继在哈尔滨工业大学、大连起重机厂机械加工车间进修，1962年被调到河南省兰考县担任县委书记，1964年5月14日因肝癌病逝于郑州，终年42岁。</div>
 		<div style="width: 400px;height: 280px; margin-top: 10px; margin-left: 10px; margin-right: 10px; border:1px solid #BDBDBD; text-align: bottom; display: flex; flex-direction: column;">
 			<div style="width: 400px;height: 240px; display: flex; flex-direction: column; padding-top: 5px; padding-bottom: 5px;">
@@ -20,7 +20,7 @@
 	</div>
 
 	<div style="width: auto;height: 300px;background: rgba(236,246,206,0.5); margin-top: 20px; display: flex; flex-direction: row; border:1px solid #BDBDBD; ">
-		<img src="qqb.jpg" style="width: 280px; height: 280px; margin-top: 10px; margin-left: 10px">
+		<img src="https://cdn.jsdelivr.net/gh/sunnyFxx/sunnyFxx.github.io@master/100/qqb.jpg" style="width: 280px; height: 280px; margin-top: 10px; margin-left: 10px">
 		<div style="margin-left: 30px; padding: 20px; text-align: left; ">瞿秋白（1899年1月29日—1935年6月18日），生于江苏常州。中国共产党早期主要领导人之一，伟大的马克思主义者，卓越的无产阶级革命家、理论家、文学家和宣传家，中国革命文学事业的重要奠基者之一。1917年秋考入北京俄文专修馆学习。1922年春，正式加入中国共产党。1923年，主编中共中央另一机关刊物《前锋》，参加编辑《向导》。1925年1月当选为中共中央中央局委员。1927年4月至5月任中共中央常务委员会委员。1927年5月在中共五届一中全会上当选为中共中央政治局委员，6月任中共中央政治局常委。大革命失败后，1927年8月至1928年7月任中共中央临时政治局委员、常委、主席。1928年7月在中共六届一中全会上当选为中共中央政治局委员。1934年任中华苏维埃共和国第二届中央执委会委员、中央执委会主席团成员、人民教育委员会委员、中华苏维埃共和国中央政府教育部部长等职。 1935年2月在福建省长汀县被国民党军逮捕，6月18日从容就义，时年36岁。</div>
 		<div style="width: 400px;height: 280px; margin-top: 10px; margin-left: 10px; margin-right: 10px; border:1px solid #BDBDBD; text-align: bottom; display: flex; flex-direction: column;">
 			<div style="width: 400px;height: 240px; display: flex; flex-direction: column; padding-top: 5px; padding-bottom: 5px;">
@@ -33,7 +33,7 @@
 	</div>
 
 	<div style="width: auto;height: 300px;background: rgba(236,246,206,0.5); margin-top: 20px; display: flex; flex-direction: row; border:1px solid #BDBDBD; ">
-		<img src="lhl.jpeg" style="width: 280px; height: 280px; margin-top: 10px; margin-left: 10px">
+		<img src="https://cdn.jsdelivr.net/gh/sunnyFxx/sunnyFxx.github.io@master/100/lhl.jpeg" style="width: 280px; height: 280px; margin-top: 10px; margin-left: 10px">
 		<div style="margin-left: 30px; padding: 20px; text-align: left; ">刘胡兰（1932年10月8日—1947年1月12日），山西省吕梁市文水县云周西村人。著名的革命先烈，优秀共产党员。1947年1月12日，国民党阎锡山军和地主武装“复仇自卫队”包围了云周西村，将群众赶到场地上，刘胡兰因叛徒出卖被捕。在敌人威胁面前，她坚贞不屈，大义凛然。敌人问她：“你给八路做过什么工作？”刘胡兰大声说：“我什么都做过！”“你为啥要参加共产党？”“因为共产党为穷人办事。”敌人恼羞成怒：“你小小年纪好嘴硬啊！你就不怕死？”刘胡兰斩钉截铁地回答：“怕死不当共产党！”残忍的敌人为了使她屈服，在她面前将同时被捕的6位革命群众用铡刀杀害。刘胡兰毫无惧色，从容走向铡刀，壮烈牺牲，尚未满15周岁。毛主席知道后非常伤心，专门为刘胡兰题字："生的伟大，死的光荣"。她也是唯一三代领导人均为其题字的英雄。</div>
 		<div style="width: 400px;height: 280px; margin-top: 10px; margin-left: 10px; margin-right: 10px; border:1px solid #BDBDBD; text-align: bottom; display: flex; flex-direction: column;">
 			<div style="width: 400px;height: 240px; display: flex; flex-direction: column; padding-top: 5px; padding-bottom: 5px;">
