--- a/100/page1.html
+++ b/100/page1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>先锋少年对话百年榜样人物</title>
 </head>
-<body style="display: flex; text-align: center;flex-direction: column;" background="red_bg.jpeg">
+<body style="display: flex; text-align: center;flex-direction: column;" background="https://cdn.jsdelivr.net/gh/sunnyFxx/sunnyFxx.github.io@master/100/red_bg.jpeg">
 	<div style="color: #F5A9BC;margin: auto;align-items: center;margin-top: 30px; margin-bottom: 20px; font-size: 30px; font-weight: bold;">先锋少年对话百年榜样人物</div>
 	<div style="width: auto;height: 300px;background: rgba(236,246,206,0.5); margin-top: 20px; display: flex; flex-direction: row; border:1px solid #BDBDBD; ">
 		<img src="https://cdn.jsdelivr.net/gh/sunnyFxx/sunnyFxx.github.io@master/100/jyl.jpeg" style="height: 280px; margin-top: 10px; margin-left: 10px">
